Setting up project's database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ims-application
+
+# database connnection
+spring.datasource.url=jdbc:postgresql://localhost:5432/ims-db
+spring.datasource.username=ims-user
+spring.datasource.password=defaultpswd
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialectke
