Applying correction to application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ims-db
 spring.datasource.username=ims-user
 spring.datasource.password=defaultpswd
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialectke
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
