Improving application.properties sectioning

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=ims-application
 
-# database connnection
+# database connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/ims-db
 spring.datasource.username=ims-user
 spring.datasource.password=defaultpswd
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 
 # hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
