Implementing Springdoc Swagger for API testing/debugging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Swagger Documentation Configuration
+springdoc.enable-default-api-docs=true
+# http://localhost:8080/ims-application/swagger-ui/index.html
+springdoc.swagger-ui.path=/ims-application/swagger-ui
+# http://localhost:8080/ims-application/api-docs
+springdoc.api-docs.path=/ims-application/api-docs
