--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ springdoc.enable-default-api-docs=true
 springdoc.swagger-ui.path=/ims-application/swagger-ui
 # http://localhost:8080/ims-application/api-docs
 springdoc.api-docs.path=/ims-application/api-docs
+
+# Security token
+api.security.token.secret=hgfv0cnk233mxlazmnkslazsmnAC
