Implementing application security measures for login validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ springdoc.enable-default-api-docs=true
 springdoc.swagger-ui.path=/ims-application/swagger-ui
 # http://localhost:8080/ims-application/api-docs
 springdoc.api-docs.path=/ims-application/api-docs
+
+# jwt auth secret key (generate with randomization script)
+jwt.key=9yhac=0nlnochZXtg6zqsOYR=DFYi94zMTnWh9oxO4SD
+# 24 hours in milliseconds
+jwt.expiration=86400000
